--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="com.example.studygo.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="com.example.studygo.SettingsFragment"
+        android:label="@string/Settings"
+        tools:layout="@layout/fragment_notifications" />
 </navigation>
