--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,17 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/scroll_view_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/scroll_view1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/scroll_view_text"
+                />
+            <TextView
+                android:id="@+id/scroll_view2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/scroll_view_text"
+                />
+            <TextView
+                android:id="@+id/scroll_view3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/scroll_view_text"
+                />
+            <TextView
+                android:id="@+id/scroll_view4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/scroll_view_text"
+                />
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
