--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_notifications" />
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.studygo.SettingsFragment"
+        android:name="com.example.studygo.ui.settings.SettingsFragment"
         android:label="@string/Settings"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
