--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,5 +26,7 @@
         android:id="@+id/navigation_settings"
         android:name="com.example.studygo.ui.settings.SettingsFragment"
         android:label="@string/Settings"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/"
+        />
+
 </navigation>
