--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -19,15 +19,15 @@
         android:text="@string/upcoming_events"
         android:textColor="@color/white"
         android:textSize="@dimen/_20ssp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        />
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        />
+        android:selectedWeekBackgroundColor="@color/white"/>
 
     <ListView
         android:id="@+id/listOfEvents"
