--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginTop="0dp"
     tools:context=".ui.dashboard.DashboardFragment"
-    android:background="@color/white"
+    android:background="@color/primary"
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/upcoming_events"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         />
@@ -27,13 +27,15 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:selectedWeekBackgroundColor="@color/white"/>
+        android:textColor="@color/white"
+        android:selectedWeekBackgroundColor="@color/white"
+        />
 
     <ListView
         android:id="@+id/listOfEvents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+
         />
 
 
