--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -6,12 +6,20 @@
     android:background="@color/primary"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/child_event_date"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/date"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/_16ssp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/child_event_time"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/time"
         android:textColor="@android:color/white"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold" />
