--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:background="@color/primary"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,31 +21,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <TextView
                 android:id="@+id/scroll_view1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/scroll_view_text"
-                />
+                android:textColor="@color/white"/>
             <TextView
                 android:id="@+id/scroll_view2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/scroll_view_text"
-                />
+                android:textColor="@color/white"/>
             <TextView
                 android:id="@+id/scroll_view3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/scroll_view_text"
-                />
+                android:textColor="@color/white"/>
             <TextView
                 android:id="@+id/scroll_view4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/scroll_view_text"
-                />
+                android:textColor="@color/white"/>
 
         </LinearLayout>
     </ScrollView>
