--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
@@ -19,6 +20,7 @@
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/baseline_settings_24"
-        android:title="@string/Settings" />
+        android:title="@string/Settings"
+       />
 
 </menu>
