--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:weekDayTextAppearance="@style/CustomCalendarDateTextAppearance"
         android:dateTextAppearance="@style/CustomCalendarDateTextAppearance"
+        android:theme="@style/CustomDatePickerDialog"
         />
 
     <ListView
