--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,20 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="CustomDatePickerDialog" parent="ThemeOverlay.AppCompat.Dialog">
+        <!--header background-->
+        <item name="colorAccent">@color/white</item>
+        <!--header textcolor-->
+        <item name="android:textColorPrimaryInverse">@color/white</item>
+        <!--body background-->
+        <item name="android:windowBackground">#000099</item>
+        <!--selected day-->
+        <item name="android:colorControlActivated">#ff8000</item>
+        <!--days of the month-->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!--days of the week-->
+        <item name="android:textColorSecondary">@color/white</item>
+        <!--cancel&ok-->
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
