--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -3,15 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:background="@color/primary"
-    android:orientation="vertical">
+    android:background="@drawable/text_view_rounded"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/child_event_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/date"
-        android:textColor="@android:color/white"
+        android:textColor="@color/eerie_black"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold" />
 
@@ -20,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/time"
-        android:textColor="@android:color/white"
+        android:textColor="@color/eerie_black"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold" />
 
@@ -29,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/event_name"
-            android:textColor="@android:color/white"
+            android:textColor="@color/eerie_black"
             android:textSize="@dimen/_16ssp"
             android:textStyle="bold" />
 
@@ -41,6 +42,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/event_details"
-        android:textColor="@android:color/white"
+        android:textColor="@color/eerie_black"
         android:textSize="@dimen/_14ssp" />
 </LinearLayout>
