--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/primary"
+    android:background="@color/moss_green"
     tools:context=".ui.messages.MessagesFragment"
     android:paddingBottom="@dimen/_36sdp">
    
@@ -117,7 +117,7 @@
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
-       android:textColorHint="@color/secondary_text"
+       android:textColorHint="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layoutSend"
        app:layout_constraintStart_toStartOf="parent"/>
