--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -7,6 +7,7 @@
     android:overScrollMode="never"
     android:padding="@dimen/_24sdp"
     android:scrollbars="none"
+    android:background="@color/beige"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_40sdp"
             android:text="@string/create_new_account"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/eerie_black"
             android:textSize="@dimen/_18ssp"
             android:textStyle="bold"/>
         <FrameLayout
@@ -112,6 +113,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_13ssp"
             android:textStyle="bold"
+            android:backgroundTint="@color/eerie_black"
             app:cornerRadius="@dimen/_8sdp"
             />
         <TextView
