--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CustomCalendarDateTextAppearance" parent="android:TextAppearance">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/eerie_black</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="CustomDatePickerDialog" parent="ThemeOverlay.AppCompat.Dialog">
         <!--header background-->
         <item name="colorAccent">@color/white</item>
         <!--header textcolor-->
-        <item name="android:textColorPrimaryInverse">@color/white</item>
+        <item name="android:textColorPrimaryInverse">@color/moss_green</item>
         <!--body background-->
-        <item name="android:windowBackground">#000099</item>
+        <item name="android:windowBackground">@color/moss_green</item>
+        <item name="android:background">@color/beige</item>
         <!--selected day-->
         <item name="android:colorControlActivated">#ff8000</item>
         <!--days of the month-->
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/eerie_black</item>
         <!--days of the week-->
-        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColorSecondary">@color/eerie_black</item>
         <!--cancel&ok-->
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/eerie_black</item>
     </style>
 </resources>
