--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -22,8 +22,10 @@
         app:title="@string/preference_notifications" />
     <SwitchPreferenceCompat
         app:key="dark_theme"
-        app:summaryOff="@string/Switch_to_dark_theme"
-        app:summaryOn="@string/Switch_to_light_theme"
+        app:summary="TODO: Implement switching themes"
         app:title="@string/Theme" />
     </PreferenceCategory>
+    <!--        app:summaryOff="@string/Switch_to_dark_theme"-->
+    <!--        app:summaryOn="@string/Switch_to_light_theme"-->
+
 </PreferenceScreen>
