Added password reset

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -39,5 +39,9 @@
             app:title="Sign Out"
             app:key="sign_out"
             />
+        <Preference
+            app:title="Delete Account"
+            app:key="delete_account"
+            />
     </PreferenceCategory>
 </PreferenceScreen>
