--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -117,7 +117,7 @@
             app:cornerRadius="@dimen/_8sdp"
             />
         <TextView
-            android:id="@+id/textSignUp"
+            android:id="@+id/textLogIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
