--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.studygo.ui.home.HomeFragment"
+        android:name="com.example.studygo.activities.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.studygo.ui.dashboard.DashboardFragment"
+        android:name="com.example.studygo.activities.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_messages"
-        android:name="com.example.studygo.ui.messages.MessagesFragment"
+        android:name="com.example.studygo.activities.ui.messages.MessagesFragment"
         android:label="@string/title_messages"
         tools:layout="@layout/fragment_messages" />
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.studygo.ui.settings.SettingsFragment"
+        android:name="com.example.studygo.activities.ui.settings.SettingsFragment"
         android:label="@string/Settings"
         />
 
