--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -62,11 +62,15 @@
             android:textColor="@color/eerie_black"
             android:textSize="@dimen/_13ssp"
             />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:animateLayoutChanges="true">
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonSignIn"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
-            android:layout_marginTop="@dimen/_20sdp"
             android:text="@string/sign_in"
             android:textColor="@color/white"
             android:textSize="@dimen/_13ssp"
@@ -74,6 +78,17 @@
             android:backgroundTint="@color/moss_green"
             app:cornerRadius="@dimen/_8sdp"
             />
+            
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+
+
+            
+        </FrameLayout>
         <TextView
             android:id="@+id/textCreateNewAccount"
             android:layout_width="wrap_content"
