--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/moss_green"
 
-    tools:context=".ui.signUpLogIn.SplashScreen">
+    tools:context=".activities.SplashScreen">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
