--- a/app/src/main/res/navigation/mobile_navigation_teacher.xml
+++ b/app/src/main/res/navigation/mobile_navigation_teacher.xml
@@ -2,14 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.studygo.activities.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+    app:startDestination="@+id/navigation_dashboard"
+    android:id="@+id/mobile_navigation_teacher">
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -22,10 +16,10 @@
         android:name="com.example.studygo.activities.ui.messages.MessagesFragment"
         android:label="@string/title_messages"
         tools:layout="@layout/fragment_messages" />
+
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.studygo.activities.ui.settings.SettingsFragment"
-        android:label="@string/Settings"
-        />
+        android:label="@string/title_messages" />
 
 </navigation>
