succsses! pulling from database

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -36,5 +36,10 @@
             app:key="sign_out"
             />
 
+        <Preference
+            app:title="Delete Account"
+            app:key="delete_account"
+            />
+
     </PreferenceCategory>
 </PreferenceScreen>
