--- a/app/src/main/res/menu/student_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/student_bottom_nav_menu.xml
@@ -13,7 +13,7 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_messages"
+        android:id="@+id/navigation_messages_activity"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_messages" />
 
