--- a/app/src/main/res/navigation/mobile_navigation_student.xml
+++ b/app/src/main/res/navigation/mobile_navigation_student.xml
@@ -22,10 +22,16 @@
         android:name="com.example.studygo.activities.ui.messages.MessagesFragment"
         android:label="@string/title_messages"
         tools:layout="@layout/fragment_messages" />
+    <activity
+        android:id="@+id/navigation_messages_activity"
+        android:name="com.example.studygo.activities.ActivityMessages"
+        android:label="@string/title_messages"
+        tools:layout="@layout/activity_messages"
+        />
 
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.studygo.activities.ui.settings.PreferenceFragment"
-        android:label="@string/title_messages"
+        android:label="@string/Settings"
         />
 </navigation>
