--- a/app/src/main/res/navigation/mobile_navigation_teacher.xml
+++ b/app/src/main/res/navigation/mobile_navigation_teacher.xml
@@ -20,6 +20,14 @@
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.studygo.activities.ui.settings.PreferenceFragment"
-        android:label="@string/title_messages" />
+        android:label="@string/Settings" />
+
+    <activity
+        android:id="@+id/navigation_messages_activity"
+        android:name="com.example.studygo.activities.ActivityMessages"
+        android:label="@string/title_messages"
+        tools:layout="@layout/activity_messages" />
+
+
 
 </navigation>
