--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -18,6 +18,16 @@
        app:layout_constraintBottom_toTopOf="@id/layoutSend"
        app:layout_constraintTop_toTopOf="parent"
        />
+
+   <View
+       android:id="@+id/headerBackground"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:background="@color/moss_green"
+       app:layout_constraintBottom_toTopOf="@id/viewSupporter"
+       app:layout_constraintTop_toTopOf="parent" />
+
+
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
@@ -26,6 +36,7 @@
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
+       android:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
 
@@ -38,6 +49,7 @@
        android:layout_marginEnd="@dimen/_16sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_info"
+       android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
@@ -50,7 +62,7 @@
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
-       android:textColor="@color/primary_text"
+       android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
@@ -58,6 +70,16 @@
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"
        />
+   
+   <View
+       android:id="@+id/viewSupporter"
+       android:layout_width="match_parent"
+       android:layout_height="1dp"
+       android:layout_marginTop="@dimen/_12sdp"
+       android:background="@color/moss_green"
+       app:layout_constraintTop_toBottomOf="@id/imageBack"/>
+
+   
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
@@ -67,9 +89,10 @@
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        android:visibility="gone"
+       app:stackFromEnd="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/viewBackground"
-       app:layout_constraintTop_toBottomOf="@id/imageBack"
+       app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        />
    
    <ProgressBar
