--- a/app/src/main/res/navigation/mobile_navigation_student.xml
+++ b/app/src/main/res/navigation/mobile_navigation_student.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.studygo.activities.HomeFragment"
+        android:name="com.example.studygo.activities.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
