added more UI to eventselector and made it so when a user joins an event on their feed it adds it to their dashboard.

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -47,9 +47,8 @@
         android:clipToPadding="false"
         android:orientation="vertical"
         android:overScrollMode="never"
-        android:padding="@dimen/_20sdp"
         android:visibility="gone"
-        app:stackFromEnd="true"
+        app:stackFromEnd="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textUpcomingEvents"
