--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -61,7 +61,7 @@
             android:id="@+id/editTextSelectDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/select_a_date" />
+            android:hint="@string/select_a_date" />
 
         <View
             android:layout_width="0dp"
@@ -94,7 +94,7 @@
             android:id="@+id/editTextSelectTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/select_a_time" />
+            android:hint="@string/select_a_time" />
 
         <View
             android:layout_width="0dp"
@@ -156,6 +156,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textSessionDetails" />
+
+    <Spinner
+        android:id="@+id/spinnerAccess"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/access_values"
+        app:layout_constraintTop_toBottomOf="@id/editTextSessionDetails"/>
 
     <Button
         android:id="@+id/registerEvent"
