--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,9 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+    <string-array name="access_values">
+        <item>Public</item>
+        <item>Private</item>
+        <item>Friends Only</item>
+    </string-array>
 </resources>
