fixed a bug with settings, got date formatted properly for when user creates an event

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -9,7 +9,7 @@
         app:useSimpleSummaryProvider="true"
         />
     <EditTextPreference
-        app:key="username"
+        app:key="name"
         app:title="@string/Username"
         app:summary="@string/Username"
         app:defaultValue="@string/Username"
